# PINN_and_CFD_Surrogates

./: COMPLETION_CERTIFICATE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  environment.yml  pyproject.toml  render.yaml  requirements.txt  vercel.json
api/: redirect.py
configs/: pinn_config.yaml  surrogate_config.yaml
core/: __init__.py  main.py  webapp.py
core/physics/: __init__.py  boundary_conditions.py  fluid_properties.py  navier_stokes.py  pde_losses.py
core/pinn/: __init__.py  inference.py  metrics.py  network.py  trainer.py
core/surrogate/: __init__.py  dataset.py  evaluator.py  model.py  trainer.py
core/utilities/: __init__.py  config_loader.py  device.py  logger.py  seed.py
core/visualization/: __init__.py
public/: index.html
reports/: experiment_log.md  project_report_template.md
solver/: forms.py  services.py  urls.py  views.py
solver/static/solver/css/: main.css
solver/static/solver/js/: main.js
solver/templates/solver/: base.html  index.html  pinn_solver.html  surrogate.html
tests/: test_physics.py  test_pinn.py  test_surrogate.py
webapp/: settings.py
